scripts/nullaway/annotator/urlbc3e98d97e_jmhorjus_EFCP_Implementation_tgz-pJ8-UDPConnector_UdpConnectorTestJ8.txt
../annotator/urlbc3e98d97e_jmhorjus_EFCP_Implementation_tgz-pJ8-UDPConnector_UdpConnectorTestJ8/src/UDPConnector/UdpConnectionManager.java:42: error: [NullAway] dereferenced expression conn is @Nullable
            conn.StopReceiveThread();
                ^
    (see http://t.uber.com/nullaway )
../annotator/urlbc3e98d97e_jmhorjus_EFCP_Implementation_tgz-pJ8-UDPConnector_UdpConnectorTestJ8/src/UDPConnector/UdpConnectionManager.java:52: error: [NullAway] dereferenced expression conn is @Nullable
            return conn.Send(data);
                       ^
    (see http://t.uber.com/nullaway )
../annotator/urlbc3e98d97e_jmhorjus_EFCP_Implementation_tgz-pJ8-UDPConnector_UdpConnectorTestJ8/src/UDPConnector/UdpConnectionManager.java:62: error: [NullAway] dereferenced expression conn is @Nullable
            return conn.Send(data);
                       ^
    (see http://t.uber.com/nullaway )
../annotator/urlbc3e98d97e_jmhorjus_EFCP_Implementation_tgz-pJ8-UDPConnector_UdpConnectorTestJ8/src/UDPConnector/UdpConnectionManager.java:74: error: [NullAway] dereferenced expression conn is @Nullable
        return conn.Receive(0 /*no blocking*/ );
                   ^
    (see http://t.uber.com/nullaway )
../annotator/urlbc3e98d97e_jmhorjus_EFCP_Implementation_tgz-pJ8-UDPConnector_UdpConnectorTestJ8/src/UDPConnector/UdpConnector.java:289: error: [NullAway] dereferenced expression m_recvSocket is @Nullable
            m_recvSocket.close();
                        ^
    (see http://t.uber.com/nullaway )
../annotator/urlbc3e98d97e_jmhorjus_EFCP_Implementation_tgz-pJ8-UDPConnector_UdpConnectorTestJ8/src/UDPConnector/ConnectionShaper.java:119: error: [NullAway] passing @Nullable parameter 'm_bufferToSend' where @NonNull is required
                    m_connectionToShape.Send(m_bufferToSend);
                                             ^
    (see http://t.uber.com/nullaway )
../annotator/urlbc3e98d97e_jmhorjus_EFCP_Implementation_tgz-pJ8-UDPConnector_UdpConnectorTestJ8/src/UDPConnector/ConnectionShaper.java:121: error: [NullAway] passing @Nullable parameter 'm_stringToSend' where @NonNull is required
                    m_connectionToShape.Send(m_stringToSend);
                                             ^
    (see http://t.uber.com/nullaway )
../annotator/urlbc3e98d97e_jmhorjus_EFCP_Implementation_tgz-pJ8-UDPConnector_UdpConnectorTestJ8/src/UDPConnector/EfcpConnectorManager.java:55: error: [NullAway] dereferenced expression conn is @Nullable
            conn.StopReceiveThread();
                ^
    (see http://t.uber.com/nullaway )
../annotator/urlbc3e98d97e_jmhorjus_EFCP_Implementation_tgz-pJ8-UDPConnector_UdpConnectorTestJ8/src/UDPConnector/EfcpConnectorManager.java:65: error: [NullAway] dereferenced expression conn is @Nullable
            return conn.Send(data);
                       ^
    (see http://t.uber.com/nullaway )
../annotator/urlbc3e98d97e_jmhorjus_EFCP_Implementation_tgz-pJ8-UDPConnector_UdpConnectorTestJ8/src/UDPConnector/EfcpConnectorManager.java:76: error: [NullAway] dereferenced expression conn is @Nullable
            return conn.Send(data);
                       ^
    (see http://t.uber.com/nullaway )
../annotator/urlbc3e98d97e_jmhorjus_EFCP_Implementation_tgz-pJ8-UDPConnector_UdpConnectorTestJ8/src/UDPConnector/EfcpConnectorManager.java:88: error: [NullAway] dereferenced expression conn is @Nullable
        return conn.Receive(maxBlockTimeInMs /*no blocking*/ );
                   ^
    (see http://t.uber.com/nullaway )
../annotator/urlbc3e98d97e_jmhorjus_EFCP_Implementation_tgz-pJ8-UDPConnector_UdpConnectorTestJ8/src/UDPConnector/EfcpConnector.java:264: error: [NullAway] dereferenced expression m_selfCancelHandle is @Nullable
                m_selfCancelHandle.cancel(false);
                                  ^
    (see http://t.uber.com/nullaway )
../annotator/urlbc3e98d97e_jmhorjus_EFCP_Implementation_tgz-pJ8-UDPConnector_UdpConnectorTestJ8/src/UDPConnector/EfcpConnector.java:428: error: [NullAway] dereferenced expression task is @Nullable
                task.cancel(false);
                    ^
    (see http://t.uber.com/nullaway )
13 errors
